Add alt text to all images

--- a/works/dev/index.html
+++ b/works/dev/index.html
@@ -72,7 +72,7 @@
     <!-- Welcome (Top) -->
     <div class="section off-white" id="welcome">
       <div class="gut-50">
-        <img src="./imgs/code-banner-strip-pic.jpg" alt="" width="100%" height="auto">
+        <img src="./imgs/code-banner-strip-pic.jpg" alt="web development computer code on a screen" width="100%" height="auto">
       </div>
 
       <div class="row">
@@ -110,10 +110,10 @@
       <div class="row" data-aos="fade-up" data-aos-duration="1500">
         <div class="col mb-3">
           <div class="card mx-auto">
-            <img class="card-img-top" src="./imgs/spider-crow-pic.jpg" alt="Card image cap">
+            <img class="card-img-top" src="./imgs/spider-crow-pic.jpg" alt="Card image cap of Spider Crow Designs jewelry artist Veronica Lynn">
             <div class="card-body">
               <h5 class="card-title">Spider Crow Designs</h5>
-              <p class="card-text">A single-page scroll artist portfolio site</p>
+              <p class="card-text">A single-page scroll jewelry artist site</p>
               <p class="card-text">Tech: MongoDB, Express, React, Node.js</p>
             </div>
             <div class="card-body">
@@ -124,7 +124,7 @@
         </div>
         <div class="col mb-3">
           <div class="card mx-auto">
-            <img class="card-img-top" src="https://images.unsplash.com/photo-1548438294-1ad5d5f4f063?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1652&q=80" alt="Card image cap">
+            <img class="card-img-top" src="https://images.unsplash.com/photo-1548438294-1ad5d5f4f063?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1652&q=80" alt="Card image cap of the words Dream Big written in chalk on a black wall">
             <div class="card-body">
               <h5 class="card-title">Inspire</h5>
               <p class="card-text">A inspirational quote generator</p>
@@ -138,7 +138,7 @@
         </div>
         <div class="col mb-3">
           <div class="card mx-auto">
-            <img class="card-img-top" src="https://images.unsplash.com/photo-1524007769096-2dad448565c9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1778&q=80" alt="Card image cap">
+            <img class="card-img-top" src="https://images.unsplash.com/photo-1524007769096-2dad448565c9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1778&q=80" alt="Card image cap of two tents under the Milky Way starry night sky">
             <div class="card-body">
               <h5 class="card-title">YelpCamp</h5>
               <p class="card-text">A Yelp-like campsites app, fully responsive, full CRUD operations</p>
@@ -152,7 +152,7 @@
         </div>
         <div class="col mb-3">
           <div class="card mx-auto">
-            <img class="card-img-top" src="https://images.unsplash.com/photo-1484755560615-a4c64e778a6c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1880&q=80" alt="Card image cap">
+            <img class="card-img-top" src="https://images.unsplash.com/photo-1484755560615-a4c64e778a6c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1880&q=80" alt="Card image cap of upside down image of a woman with modern hair listening to white headphones against pink wall">
             <div class="card-body">
               <h5 class="card-title">Patatap Clone</h5>
               <p class="card-text">A visual sound kit app</p>
@@ -166,7 +166,7 @@
         </div>
         <div class="col mb-3">
           <div class="card mx-auto">
-            <img class="card-img-top" src="https://images.unsplash.com/photo-1526401281623-279b498f10f4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1700&q=80" alt="Card image cap">
+            <img class="card-img-top" src="https://images.unsplash.com/photo-1526401281623-279b498f10f4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1700&q=80" alt="Card image cap of a birds-eye view of a Caffè latte in a teal coffee mug with teal saucer and spoon on wooden table">
             <div class="card-body">
               <h5 class="card-title">Captain Coffee</h5>
               <p class="card-text">Fictional coffee shop site</p>
@@ -180,7 +180,7 @@
         </div>
         <div class="col mb-3">
           <div class="card mx-auto">
-            <img class="card-img-top" src="https://images.unsplash.com/photo-1550745165-9bc0b252726f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80" alt="Card image cap">
+            <img class="card-img-top" src="https://images.unsplash.com/photo-1550745165-9bc0b252726f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80" alt="Card image cap of various 1980's technologies styled pink and blue">
             <div class="card-body">
               <h5 class="card-title">80's Themed Profile Page</h5>
               <p class="card-text">A simple frontend profile page</p>
@@ -207,7 +207,7 @@
       </div>
     
       <div id="about-image" class="gut-50">
-        <img src="./imgs/about-banner-pic.jpg" width="100%" height="auto">
+        <img src="./imgs/about-banner-pic.jpg" width="100%" height="auto" alt="Christopher Dodge at Arches National Park Utah">
       </div>
         
       <div class="container">
