Highlight keywords, update About text

--- a/works/dev/index.html
+++ b/works/dev/index.html
@@ -83,7 +83,7 @@
             </div>
             <!-- <div class="col"></div> -->
             <div id="summary_text" class="">
-              <p>My name is Christopher Dodge. I'm a full-stack web developer and lifelong learner with a passion for making the world a better place. Focused on JavaScript and MERN stack development with a willingness to learn new technologies.</p>
+              <p>My name is Christopher Dodge. I'm a <strong>full-stack web developer</strong> and lifelong learner with a passion for making the world a better place. Focused on JavaScript and MERN stack development with a willingness to learn new technologies.</p>
             </div>
             <!-- <div class="col"></div> -->
           </div>
@@ -207,7 +207,7 @@
       </div>
     
       <div id="about-image" class="gut-50">
-        <img src="./imgs/about-banner-pic.jpg" width="100%" height="auto" alt="Christopher Dodge at Arches National Park Utah">
+        <img src="./imgs/about-banner-pic.jpg" width="100%" height="auto" alt="full-stack web developer Christopher Dodge at Arches National Park Utah">
       </div>
         
       <div class="container">
@@ -215,9 +215,9 @@
           <div class="col-0 col-md-3"></div>
           <div class="col-12 col-md-6">
               <h2>Christopher Dodge</h2>
-              <h3>Full Stack Web Developer</h3>
+              <h3>Full-Stack Web Developer</h3>
                 <hr>
-                 <p>My life is about creating. And the more tools, the better. So, for me, design and development go hand in hand. Driven by curiosity and a love of learning, I seek to leave the world better than I found it. That means empowering individuals, cultivating meaningful relationships and embracing life’s challenges as opportunities. My most recent opportunity has been becoming a new dad.</p>
+                 <p>My life is about creating. And the more tools, the better. So, for me, design and development go hand in hand. Driven by curiosity and a love of learning, I seek to leave the world better than I found it. That means empowering individuals, cultivating meaningful relationships and embracing life’s challenges as opportunities. I also love the outdoors: hiking, camping, fitness and the like.</p>
           </div>
           <div class="col-0 col-md-3"></div>
         </div>
@@ -273,7 +273,7 @@
       <div class="row d-flex justify-content-center">
         <div class="col-12"></div>
           <p>
-            Thank you for visiting!
+            <strong>Thank you for visiting!</strong>
           </p>
         </div>
       </div>
