--- a/works/wood.html
+++ b/works/wood.html
@@ -51,7 +51,7 @@
                 <li><a class="dropdown-item" href="#">Woodworking</a></li>
                 <li><a class="dropdown-item" href="./leather.html">Leather Crafting</a></li>
                 <li><a class="dropdown-item" href="./film.html">Filmmaking</a></li>
-                <li><a class="dropdown-item" href="https://dodgedesign.io/" target="_blank" rel='noreferrer'>Web Development</a></li>
+                <li><a class="dropdown-item" href="works/dev/index.html" target="_blank" rel='noreferrer'>Web Development</a></li>
                 <!-- <li><a class="dropdown-item" href="./ideas.html">Ideas</a></li> -->
                 <!-- <div class="dropdown-divider"></div> -->
                 <!-- <li><a class="dropdown-item" href="./inspiration.html">Inspiration</a></li> -->
