--- a/works/ideas.html
+++ b/works/ideas.html
@@ -51,7 +51,7 @@
                 <li><a class="dropdown-item" href="./wood.html">Wodoworking</a></li>
                 <li><a class="dropdown-item" href="./leather.html">Leather Crafting</a></li>
                 <li><a class="dropdown-item" href="./film.html">Film Production</a></li>
-                <li><a class="dropdown-item" href="works/dev/index.html" target="_blank" rel='noreferrer'>Web Development</a></li>
+                <li><a class="dropdown-item" href="dev/index.html" target="_blank" rel='noreferrer'>Web Development</a></li>
                 <li><a class="dropdown-item" href="#">Ideas</a></li>
                 <!-- <div class="dropdown-divider"></div> -->
                 <!-- <li><a class="dropdown-item" href="./inspiration.html">Inspiration</a></li> -->
